@@ -1,3 +1,8 @@
+2005-08-14    <tino@firebird.03.softkill.net>
+
+	* setuptino.sh (DIET): diet option added, just create directory
+	diet
+
 2005-08-08    <tino@firebird.03.softkill.net>
 
 	* crypthash.hh: generic structures and templates: md5 and sha
